[package]
name = "phony"
version = "0.1.0"
authors = ["ltoddy <taoliu14@acm.org>"]
description = "generates phony data"
keywords = ["data", "generator"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/phony/0.1.0/phony/"
homepage = "https://github.com/ltoddy/phony"
repository = "https://github.com/ltoddy/phony"
categories = ["data"]
edition = "2018"
