[package]
name = "phony"
version = "0.1.1"
authors = ["ltoddy <taoliu0509@gmail.com>"]
description = "generates phony data"
keywords = ["data", "generator"]
exclude = ["/.travis.yml"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/phony/0.1.0/phony/"
homepage = "https://github.com/ltoddy/phony"
repository = "https://github.com/ltoddy/phony"
categories = ["data"]
edition = "2018"

[badges]
travis-ci = { repository = "ltoddy/phony", branch = "master" }
